Ya no se puuede seleccionar texto dentro del canvas

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -31,6 +31,7 @@ body {
   border-left: 2px solid #ccc;
   height: 100%; /* Iguala la altura al contenedor */
   cursor: crosshair;
+  user-select: none;
 }
 
 input {
