--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -20,11 +20,56 @@ body {
   padding-top: 20px; /* Separación superior */
   gap: 10px;
   background-color: #eee;
-  width: 120px;
   box-sizing: border-box;
   border: 1px solid #333;
 }
 
+.sidebar-left {
+  width: 150px;
+}
+
+.sidebar-right {
+  width: 300px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+h3 {
+  margin-bottom: 10px;
+}
+
+.sidebar-right h3 {
+  margin-bottom: 15px;
+  font-size: 24px;
+}
+
+.sidebar-right label {
+  display: block;
+  margin-bottom: 12px;
+  margin-top: 25px;
+  font-size: 20px;
+}
+
+.sidebar-right input[type="number"],
+.sidebar-right select {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  border: 1px solid #555;
+  border-radius: 4px;
+  background: #3a3a3a;
+  color: white;
+  box-sizing: border-box;
+}
+
+.sidebar-right input[type="checkbox"] {
+  width: 18px !important;
+  height: 18px !important;
+  cursor: pointer;
+  margin-right: 8px;
+  accent-color: #111;
+  vertical-align: middle;
+}
 .canvas {
   flex: 1;
   background: #fff;
@@ -34,14 +79,16 @@ body {
   user-select: none;
 }
 
-input {
+#btn-est-rect,
+#btn-est-clean,
+#btn-est-move {
   display: none;
 }
 
 .tool-btn,
 .tool-btn-exp {
   padding: 5px;
-  margin: 7px 8px 5px 5px;
+  margin: 7px 8px 7px 7px;
   user-select: none;
   background-color: #ddd;
   color: #333;
@@ -50,13 +97,26 @@ input {
   font-size: 20px;
 }
 
+.tool-btn-exp {
+  font-size: 18px;
+  padding: 8px;
+  background-color: #dfd;
+  margin-bottom: 30px;
+  margin-top: auto; /* Empuja el botón hacia abajo */
+}
+
+button:hover {
+  background-color: #bdb;
+  cursor: pointer;
+}
+
 .tool-btn:hover {
-  background-color: #ccc;
+  background-color: #bbb;
   cursor: pointer;
 }
 
 button:active {
-  background-color: #000;
+  background-color: #7a7;
   color: white;
   position: relative;
   top: 2px;
@@ -92,4 +152,29 @@ input[type="checkbox"]:checked + label.tool-btn {
 
 .menu-item:hover {
   background: #f0f0f0;
+}
+.form-section {
+  padding: 15px;
+  width: 90%;
+}
+
+.form-section h3 {
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+.form-section label {
+  display: block;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+
+.form-section input[type="number"],
+.form-section select {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
