--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1,14 +1,55 @@
 body {
   margin: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   background: #ddf;
+}
+
+.floors {
+  display: flex;
+  margin-left: -150px;
+  gap: 10px;
+}
+
+.floors h3 {
+  margin-right: 15px;
+  font-size: 22px;
+}
+
+.floors input[type="checkbox"] {
+  display: none;
+  margin-right: 8px;
+  accent-color: #111;
+  vertical-align: middle;
+}
+
+.btn-floor {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 8px 12px;
+  margin-right: 5px;
+  font-size: 18px;
+  border: 2px solid #333;
+  user-select: none;
+}
+
+.btn-floor:hover {
+  background-color: #ccc;
+  cursor: pointer;
+}
+
+.floors input[type="checkbox"]:checked + label.btn-floor {
+  background-color: #111;
+  color: white;
 }
 
 .container {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
   height: 80vh; /* Altura fija del área de trabajo */
   width: 80vw;
   border: 2px solid #888;
@@ -34,7 +75,7 @@ body {
   overflow-x: hidden;
 }
 
-h3 {
+.sidebar-right h3 {
   margin-bottom: 10px;
 }
 
@@ -123,7 +164,7 @@ button:active {
   left: 2px;
 }
 
-input[type="checkbox"]:checked + label.tool-btn {
+.sidebar-left input[type="checkbox"]:checked + label.tool-btn {
   box-shadow: none;
   background-color: #222;
   color: white;
