--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,25 +7,21 @@ body {
   align-items: center;
   background: #ddf;
 }
-
 .floors {
   display: flex;
   margin-left: -150px;
   gap: 10px;
 }
-
 .floors h3 {
   margin-right: 15px;
   font-size: 22px;
 }
-
 .floors input[type="checkbox"] {
   display: none;
   margin-right: 8px;
   accent-color: #111;
   vertical-align: middle;
 }
-
 .btn-floor {
   margin-top: 15px;
   margin-bottom: 15px;
@@ -35,62 +31,54 @@ body {
   border: 2px solid #333;
   user-select: none;
 }
-
 .btn-floor:hover {
   background-color: #ccc;
   cursor: pointer;
 }
-
 .floors input[type="checkbox"]:checked + label.btn-floor {
   background-color: #111;
   color: white;
 }
-
 .container {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  height: 80vh; /* Altura fija del área de trabajo */
+  height: 80vh;
   width: 80vw;
   border: 2px solid #888;
 }
-
 .sidebar {
   display: flex;
   flex-direction: column;
-  padding-top: 20px; /* Separación superior */
+  padding-top: 20px;
   gap: 10px;
   background-color: #eee;
   box-sizing: border-box;
   border: 1px solid #333;
 }
-
 .sidebar-left {
   width: 150px;
 }
-
 .sidebar-right {
   width: 300px;
   overflow-y: auto;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
-
 .sidebar-right h3 {
   margin-bottom: 10px;
 }
-
 .sidebar-right h3 {
   margin-bottom: 15px;
   font-size: 24px;
 }
-
 .sidebar-right label {
   display: block;
   margin-bottom: 12px;
   margin-top: 25px;
   font-size: 20px;
 }
-
 .sidebar-right input[type="number"],
 .sidebar-right select {
   width: 100%;
@@ -98,11 +86,10 @@ body {
   margin-top: 5px;
   border: 1px solid #555;
   border-radius: 4px;
-  background: #3a3a3a;
-  color: white;
+  background: #fff;
+  color: #333;
   box-sizing: border-box;
 }
-
 .sidebar-right input[type="checkbox"] {
   width: 18px !important;
   height: 18px !important;
@@ -115,19 +102,16 @@ body {
   flex: 1;
   background: #fff;
   border-left: 2px solid #ddd;
-  height: 100%; /* Iguala la altura al contenedor */
+  height: 100%;
   cursor: crosshair;
   user-select: none;
 }
-
 #btn-est-rect,
 #btn-est-clean,
 #btn-est-move {
   display: none;
 }
-
-.tool-btn,
-.tool-btn-exp {
+.tool-btn {
   padding: 5px;
   margin: 7px 8px 7px 7px;
   user-select: none;
@@ -137,25 +121,24 @@ body {
   box-shadow: 2px 2px 1px #333;
   font-size: 20px;
 }
-
 .tool-btn-exp {
-  font-size: 18px;
+  font-size: 24px;
   padding: 8px;
-  background-color: #dfd;
-  margin-bottom: 30px;
-  margin-top: auto; /* Empuja el botón hacia abajo */
+  background-color: #cfc;
+  cursor: pointer;
+  border: 1px solid #333;
+  box-shadow: 2px 2px 1px #333;
+  border-radius: 4px;
+  text-align: button;
 }
-
 button:hover {
   background-color: #bdb;
   cursor: pointer;
 }
-
 .tool-btn:hover {
   background-color: #bbb;
   cursor: pointer;
 }
-
 button:active {
   background-color: #7a7;
   color: white;
@@ -163,7 +146,6 @@ button:active {
   top: 2px;
   left: 2px;
 }
-
 .sidebar-left input[type="checkbox"]:checked + label.tool-btn {
   box-shadow: none;
   background-color: #222;
@@ -172,7 +154,6 @@ button:active {
   top: 2px;
   left: 2px;
 }
-
 .context-menu {
   position: fixed;
   background: white;
@@ -181,16 +162,13 @@ button:active {
   display: none;
   z-index: 1000;
 }
-
 .context-menu.visible {
   display: block;
 }
-
 .menu-item {
   padding: 10px 20px;
   cursor: pointer;
 }
-
 .menu-item:hover {
   background: #f0f0f0;
 }
@@ -198,19 +176,16 @@ button:active {
   padding: 15px;
   width: 90%;
 }
-
 .form-section h3 {
   margin-bottom: 15px;
   font-size: 20px;
 }
-
 .form-section label {
   display: block;
   margin-top: 30px;
   margin-bottom: 10px;
   font-size: 18px;
 }
-
 .form-section input[type="number"],
 .form-section select {
   width: 100%;
