--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="icon" href="../images/oikos_icon.ico" type="image/x-icon" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="{{ url_for('static', filename='images/oikos_icon.ico') }}"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Oikos</title>
