agrego el archivo de show_result para mostrar el resultado de mejor manera

--- a/templates/index.html
+++ b/templates/index.html
@@ -122,9 +122,9 @@
     <script src="{{ url_for('static', filename='js/canvas.js') }}"></script>
     <script src="{{ url_for('static', filename='js/contextMenu.js') }}"></script>
     <script src="{{ url_for('static', filename='js/export.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/show_result.js') }}"></script>
     <script src="{{ url_for('static', filename='js/floors.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-
     <script>
       lucide.createIcons();
     </script>
