faltaban nombres en ingles

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
       </svg>
       <div class="sidebar sidebar-right">
         <div class="form-section">
-          <h3>additional information</h3>
+          <h3>Additional Information</h3>
 
           <label>Area:</label>
           <input
@@ -110,12 +110,12 @@
       </div>
     </div>
     <div id="contextMenu" class="context-menu">
-      <div class="menu-item" data-tipo="dormitorio">Bedroom</div>
-      <div class="menu-item" data-tipo="cocina">Kitchen</div>
-      <div class="menu-item" data-tipo="baño">Bathroom</div>
-      <div class="menu-item" data-tipo="sala">Hall</div>
-      <div class="menu-item" data-tipo="comedor">Dining Room</div>
-      <div class="menu-item" data-tipo="hab-invitados">Guestroom</div>
+      <div class="menu-item" data-tipo="bedroom">Bedroom</div>
+      <div class="menu-item" data-tipo="kitchen">Kitchen</div>
+      <div class="menu-item" data-tipo="bathroom">Bathroom</div>
+      <div class="menu-item" data-tipo="hall">Hall</div>
+      <div class="menu-item" data-tipo="dining-room">Dining Room</div>
+      <div class="menu-item" data-tipo="guestroom">Guestroom</div>
     </div>
     <script src="{{ url_for('static', filename='js/state.js') }}"></script>
     <script src="{{ url_for('static', filename='js/tools.js') }}"></script>
