nuevo logo con animacion y centrado, en principio

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,11 @@
     <div class="logo-geometric">
       <div class="house-icon">
         <div class="roof"></div>
-        <div class="base"></div>
+        <div class="base">
+          <div class="door"></div>
+          <div class="window left"></div>
+          <div class="window right"></div>
+        </div>
       </div>
       <span>Oikos</span>
     </div>
